@@ -1,14 +1,14 @@
 package com.example.member.service;
 
 import com.example.member.dto.DeleteDTO;
-import com.example.member.dto.MemberDTO;
 import com.example.member.dto.TodoDTO;
 import com.example.member.dto.UpdateDTO;
+import com.example.member.exception.BadRequest;
+import com.example.member.exception.NotFound;
+import com.example.member.mapper.UpdateMapper;
 import com.example.member.repository.MemberRepository;
-import org.springframework.http.ResponseEntity;
 import com.example.member.entity.MemberEntity;
 import com.example.member.entity.TodoEntity;
-import com.example.member.mapper.MemberMapper;
 import com.example.member.mapper.TodoMapper;
 import com.example.member.repository.TodoRepository;
 import com.example.member.response.ResponseData;
@@ -17,6 +17,7 @@ import com.example.member.response.Success;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.web.bind.annotation.ResponseStatus;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -25,6 +26,7 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@ResponseStatus
 public class TodoService {
 
     private final MemberRepository memberRepository;
@@ -57,55 +59,74 @@ public class TodoService {
         }
     }
 
-    public ResponseData<List<TodoDTO>> allList(boolean todoCheck) { // 자료형을 boolean으로 변경
-        if (todoCheck) { // boolean 값에 따라 수정
+    public ResponseData<List<TodoDTO>> allList(boolean todoCheck) {
+        if (todoCheck) {
             List<TodoEntity> allTodos = todoRepository.findAll(Sort.by(Sort.Direction.DESC, "id"));
 
-            // todoCheck 값이 true인 TodoEntity만 필터링
             List<TodoEntity> filteredTodos = allTodos.stream()
-                    .filter(todoEntity -> todoEntity.isTodoCheck()) // boolean 값 확인
-                    .collect(Collectors.toList());
+                    .filter(TodoEntity::isTodoCheck)
+                    .toList();
 
             List<TodoDTO> todoDTOList = filteredTodos.stream()
-                    .map(todoEntity -> TodoMapper.INSTANCE.toDTO(todoEntity))
+                    .map(TodoMapper.INSTANCE::toDTO)
                     .collect(Collectors.toList());
 
             return ResponseData.res(StatusCode.OK, Success.TRUE, todoDTOList);
         } else {
-            // todoCheck가 false인 경우에는 빈 리스트 반환
             return ResponseData.res(StatusCode.OK, Success.TRUE, new ArrayList<>());
         }
     }
-    public ResponseData<List<TodoDTO>> searchTitle(TodoDTO todoDTO) {
-        String Categorykeyword = todoDTO.getTodoTitle(); // 키워드 추출
-        Optional<List<TodoEntity>> todoEntities = todoRepository.findByTodoTitleContaining(Categorykeyword);
 
-        if (todoEntities.isPresent() && !todoEntities.get().isEmpty()) {
-            List<TodoDTO> todoDTOList = todoEntities.get().stream()
-                    .filter(TodoEntity::isTodoCheck) // todoCheck가 true인 엔티티만 필터링
-                    .map(TodoMapper.INSTANCE::toDTO)
-                    .collect(Collectors.toList());
-            return ResponseData.res(StatusCode.OK, Success.TRUE, todoDTOList);
-        } else {
-            return ResponseData.res(StatusCode.BAD_REQUEST, Success.FALSE, null);
+    public ResponseData<List<TodoDTO>> searchTitle(TodoDTO todoDTO) {
+        try {
+            String titleKeyword = todoDTO.getTodoTitle(); // 키워드 추출
+            Optional<List<TodoEntity>> todoEntities = todoRepository.findByTodoTitleContaining(titleKeyword);
+
+            if (todoEntities.isPresent() && !todoEntities.get().isEmpty()) {
+                List<TodoDTO> todoDTOList = todoEntities.get().stream()
+                        .filter(TodoEntity::isTodoCheck) // todoCheck가 true인 엔티티만 필터링
+                        .map(TodoMapper.INSTANCE::toDTO)
+                        .collect(Collectors.toList());
+                return ResponseData.res(StatusCode.OK, Success.TRUE, todoDTOList);
+            } else {
+                return ResponseData.res(StatusCode.NOT_FOUND, Success.FALSE);
+            }
+        } catch (Exception e) {
+            // 기타 예외 처리
+            return ResponseData.res(StatusCode.INTERNAL_SERVER_ERROR, Success.FALSE);
         }
     }
+
 
 
     public ResponseData<List<TodoDTO>> searchCategory(TodoDTO todoDTO) {
-        String Categorykeyword = todoDTO.getTodoCategory(); // 키워드 추출
-        Optional<List<TodoEntity>> todoEntities = todoRepository.findByTodoCategoryContaining(Categorykeyword);
+        try {
+            String categoryKeyword = todoDTO.getTodoCategory();
+            Optional<List<TodoEntity>> todoEntities = todoRepository.findByTodoCategoryContaining(categoryKeyword);
 
-        if (todoEntities.isPresent() && !todoEntities.get().isEmpty()) {
-            List<TodoDTO> todoDTOList = todoEntities.get().stream()
-                    .filter(TodoEntity::isTodoCheck) // todoCheck가 true인 엔티티만 필터링
-                    .map(TodoMapper.INSTANCE::toDTO)
-                    .collect(Collectors.toList());
-            return ResponseData.res(StatusCode.OK, Success.TRUE, todoDTOList);
-        } else {
-            return ResponseData.res(StatusCode.BAD_REQUEST, Success.FALSE, null);
+            if (todoEntities.isPresent()) {
+                List<TodoDTO> todoDTOList = todoEntities.get().stream()
+                        .filter(TodoEntity::isTodoCheck)
+                        .map(TodoMapper.INSTANCE::toDTO)
+                        .collect(Collectors.toList());
+
+                if (!todoDTOList.isEmpty()) {
+                    return ResponseData.res(StatusCode.OK, Success.TRUE, todoDTOList);
+                } else {
+                    return ResponseData.res(StatusCode.NOT_FOUND, Success.FALSE);
+                }
+            } else {
+                return ResponseData.res(StatusCode.NOT_FOUND, Success.FALSE);
+            }
+        } catch (Exception e) {
+            // 기타 예외 처리
+            return ResponseData.res(StatusCode.BAD_REQUEST, Success.FALSE);
         }
     }
+
+
+
+
 
 
     public ResponseData<?> delete(DeleteDTO deleteDTO) {
@@ -126,31 +147,50 @@ public class TodoService {
 
     public ResponseData<TodoEntity> update(UpdateDTO updateDTO) {
         try {
-            TodoEntity todoEntity = Mapper.INSTANCE.updateDTO;
+            // UpdateDTO를 TodoEntity로 변환
+            TodoEntity todoEntity = UpdateMapper.INSTANCE.toEntity(updateDTO);
+
+            // MemberEntity를 조회
             Optional<MemberEntity> optionalMemberEntity = memberRepository.findById(updateDTO.getMemberId());
+            System.out.println("멤버엔티티 : " + optionalMemberEntity);
             if (optionalMemberEntity.isPresent()) {
                 String memberEmail = optionalMemberEntity.get().getMemberEmail();
+                System.out.println("멤버이메일" + memberEmail);
+
                 Optional<TodoEntity> optionalTodoEntity = todoRepository.findByIdAndTodoEmail(updateDTO.getTodoId(), memberEmail);
-                if(optionalTodoEntity.isPresent()) {
+                if (optionalTodoEntity.isPresent()) {
+                    System.out.println("투두엔티티" + optionalTodoEntity);
+                    TodoEntity existingTodo = optionalTodoEntity.get();
+                    System.out.println("익사이팅 투두" + existingTodo );
+                    // 기존 TodoEntity에 업데이트할 내용을 설정
+                    existingTodo.setTodoTitle(todoEntity.getTodoTitle());
+                    existingTodo.setTodoContent(todoEntity.getTodoContent());
+                    existingTodo.setTodoCategory(todoEntity.getTodoCategory());
+                    existingTodo.setTodoCheck(todoEntity.isTodoCheck());
 
+                    // 업데이트된 TodoEntity를 저장
+                    TodoEntity updatedTodo = todoRepository.save(existingTodo);
+                    return ResponseData.res(StatusCode.OK, Success.TRUE, updatedTodo);
+                } else {
+                    throw new NotFound("Todo not found for the given ID and member email", StatusCode.NOT_FOUND);
                 }
-                todoEntity.setTodoTitle(todoDTO.getTodoTitle());
-                todoEntity.setTodoContent(todoDTO.getTodoContent());
-                todoEntity.setTodoCategory(todoDTO.getTodoCategory());
-                todoEntity.setTodoLikes(todoDTO.getTodoLikes());
-                todoEntity.setTodoCheck(todoDTO.isTodoCheck());
-
-                todoRepository.save(todoEntity);
-
-                TodoEntity updatedTodo = todoRepository.save(todoEntity);
-                return ResponseData.res(StatusCode.OK, Success.TRUE, updatedTodo);
             } else {
-                return ResponseData.res(StatusCode.BAD_REQUEST, Success.FALSE);
+                throw new BadRequest("Member not found for the given ID", StatusCode.BAD_REQUEST);
             }
+        } catch (NotFound e) {
+            // NotFound 예외 처리
+            return ResponseData.res(e.getStatusCode(), Success.FALSE);
+        } catch (BadRequest e) {
+            // BadRequest 예외 처리
+            return ResponseData.res(e.getStatusCode(), Success.FALSE);
         } catch (Exception e) {
-            return ResponseData.res(StatusCode.BAD_REQUEST, Success.FALSE);
+            // 기타 예외 처리
+            return ResponseData.res(StatusCode.INTERNAL_SERVER_ERROR, Success.FALSE);
         }
     }
+
+
+
 
 
 
